<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/loginPhone"
            android:hint="@string/global_phoneEtHint"
            android:textSize="@dimen/global_etTextSize"
            android:textColorHint="@color/global_lightNegative"
            android:background="@drawable/global_edit_text_bg"
            android:layout_marginBottom="@dimen/entry_loginItem_mB"
            android:paddingLeft="@dimen/global_editText_pL"
            android:paddingTop="@dimen/global_editText_pTB"
            android:paddingBottom="@dimen/global_editText_pTB"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:hint="@string/global_passwordEtHint"
            android:textSize="@dimen/global_etTextSize"
            android:textColorHint="@color/global_lightNegative"
            android:background="@drawable/global_edit_text_bg"
            android:paddingLeft="@dimen/global_editText_pL"
            android:paddingTop="@dimen/global_editText_pTB"
            android:paddingBottom="@dimen/global_editText_pTB"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/entry_missPasswordTip_padding"
            android:paddingRight="@dimen/entry_missPasswordTip_padding"
            android:paddingTop="@dimen/entry_missPasswordTip_padding"
            android:paddingBottom="@dimen/entry_missPasswordTip_pB"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="right"
            android:text="@string/entry_missPasswordTip"
            android:textSize="@dimen/global_resendSmsCodeTipTextSize"
            android:textColor="@color/global_negative"
            android:onClick="onMissPasswordTipClick"
            android:clickable="true"
            tools:ignore="SmallSp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/global_login"
            android:textColor="@color/global_normalText"
            android:background="@drawable/global_corner_button_bg"
            android:onClick="onLoginButtonClick"/>

</LinearLayout>