<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/global_padding"
              tools:context="${linearPackage}.${activityClass}">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/entry_appName"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/briefIntro"
            android:textColor="@color/global_normalText"
            android:id="@+id/entry_briefIntro"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/entry_briefInfo_mT"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/entry_button_margin"
            style="?android:attr/buttonBarStyle">

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/global_signIn"
                android:textColor="@color/global_normalText"
                android:id="@+id/signUpButton"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/entry_button"
                style="?android:attr/buttonStyle"
                android:enabled="false"
                tools:enabled="true"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/global_login"
                android:textColor="@color/global_normalText"
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/entry_button"
                style="?android:attr/buttonStyle"
                android:enabled="false"/>

    </LinearLayout>

    <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/entry_sign_in"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            tools:visibility="visible"/>

    <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/entry_login"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entry_quickSignInTip_mT">

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@color/global_deepBackground"/>
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/entry_quickSignIn"
                android:id="@+id/textView2"
                android:textSize="@dimen/entry_quickSignTipTextSize"
                android:textColor="@color/global_negText"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@color/global_deepBackground"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/entry_quickSignButtonBar_mT">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton1"
                android:background="@drawable/entry_quick_sign_in_button"
                android:contentDescription="@string/entry_quickSignInImageButton"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/entry_quickSignInButtonGap"
                android:layout_marginRight="@dimen/entry_quickSignInButtonGap"
                android:id="@+id/imageButton2"
                android:background="@drawable/entry_quick_sign_in_button"
                android:contentDescription="@string/entry_quickSignInImageButton"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:background="@drawable/entry_quick_sign_in_button"
                android:contentDescription="@string/entry_quickSignInImageButton"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|bottom">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_jumpEntry"
                android:textColor="@color/global_negText"
                android:id="@+id/button3"
                android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>